@@ -21,72 +21,57 @@
 #include "sysinfo.h"
 #include "zbxregexp.h"
 
-#if !defined(HAVE_SYS_PROCFS_H)
-#	include "../common/common.h"
-#endif
-
-#define DO_SUM 0
-#define DO_MAX 1
-#define DO_MIN 2
-#define DO_AVG 3
-
-#ifdef HAVE_SYS_PROCFS_H
-static int	check_procstate(psinfo_t *psinfo, int zbx_proc_stat)
+static int	check_procstate(struct procentry64 *procentry, int zbx_proc_stat)
 {
-	if (zbx_proc_stat == ZBX_PROC_STAT_ALL)
+	if (ZBX_PROC_STAT_ALL == zbx_proc_stat)
 		return SUCCEED;
 
 	switch (zbx_proc_stat)
 	{
 		case ZBX_PROC_STAT_RUN:
-			return (psinfo->pr_lwp.pr_sname == PR_SNAME_TSRUN) ? SUCCEED : FAIL;
+			return SRUN == procentry->pi_state ? SUCCEED : FAIL;
 		case ZBX_PROC_STAT_SLEEP:
-			return (psinfo->pr_lwp.pr_sname == PR_SNAME_TSSLEEP) ? SUCCEED : FAIL;
+			return SSLEEP == procentry->pi_state ? SUCCEED : FAIL;
 		case ZBX_PROC_STAT_ZOMB:
-			return (psinfo->pr_lwp.pr_sname == PR_SNAME_TSZOMB) ? SUCCEED : FAIL;
+			return SZOMB == procentry->pi_state ? SUCCEED : FAIL;
 	}
 
 	return FAIL;
 }
-#else
-static int	check_procstate(struct procsinfo *procsinfo, int zbx_proc_stat)
+
+static int	check_procargs(struct procentry64 *procentry, const char *proccomm)
 {
-	if (zbx_proc_stat == ZBX_PROC_STAT_ALL)
-		return SUCCEED;
+	int	i;
+	char	procargs[MAX_STRING_LEN];
 
-	switch (zbx_proc_stat)
+	if (0 != getargs(procentry, (int)sizeof(*procentry), procargs, (int)sizeof(procargs)))
+		return FAIL;
+
+	for (i = 0; i < sizeof(procargs) - 1; i++)
 	{
-		case ZBX_PROC_STAT_RUN:
-			return (procsinfo->pi_state == SRUN) ? SUCCEED : FAIL;
-		case ZBX_PROC_STAT_SLEEP:
-			return (procsinfo->pi_state == SSLEEP) ? SUCCEED : FAIL;
-		case ZBX_PROC_STAT_ZOMB:
-			return (procsinfo->pi_state == SZOMB) ? SUCCEED : FAIL;
+		if ('\0' == procargs[i])
+		{
+			if ('\0' == procargs[i + 1])
+				break;
+
+			procargs[i] = ' ';
+		}
 	}
 
-	return FAIL;
+	if (i == sizeof(procargs) - 1)
+		procargs[i] = '\0';
+
+	return NULL != zbx_regexp_match(procargs, proccomm, NULL) ? SUCCEED : FAIL;
 }
-#endif /* HAVE_SYS_PROCFS_H */
 
 int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	char			tmp[MAX_STRING_LEN], *procname, *proccomm, *param;
-#ifdef HAVE_SYS_PROCFS_H
-	DIR			*dir;
-	struct dirent		*entries;
-	zbx_stat_t		buf;
-	struct psinfo		psinfo;
-	int			fd = -1;
-#else
-	struct procsinfo	procsinfo;
-	pid_t			pid = 0;
-	AGENT_RESULT		proc_args;
-#endif /* HAVE_SYS_PROCFS_H */
+	char			*param, *procname, *proccomm;
 	struct passwd		*usrinfo;
-	zbx_uint64_t		value = 0;
+	struct procentry64	procentry;
+	pid_t			pid = 0;
 	int			do_task;
-	double			memsize = 0;
-	zbx_uint64_t		proccount = 0;
+	zbx_uint64_t		memsize = 0, proccount = 0, value;
 
 	if (4 < request->nparam)
 		return SYSINFO_RET_FAIL;
@@ -105,119 +90,49 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 	param = get_rparam(request, 2);
 
 	if (NULL == param || '\0' == *param || 0 == strcmp(param, "sum"))
-		do_task = DO_SUM;
+		do_task = ZBX_DO_SUM;
 	else if (0 == strcmp(param, "avg"))
-		do_task = DO_AVG;
+		do_task = ZBX_DO_AVG;
 	else if (0 == strcmp(param, "max"))
-		do_task = DO_MAX;
+		do_task = ZBX_DO_MAX;
 	else if (0 == strcmp(param, "min"))
-		do_task = DO_MIN;
+		do_task = ZBX_DO_MIN;
 	else
 		return SYSINFO_RET_FAIL;
 
 	proccomm = get_rparam(request, 3);
 
-#ifdef HAVE_SYS_PROCFS_H /* AIX 5.x */
-	if (NULL == (dir = opendir("/proc")))
-		return SYSINFO_RET_FAIL;
-
-	while (NULL != (entries = readdir(dir)))
+	while (0 < getprocs64(&procentry, (int)sizeof(struct procentry64), NULL, 0, &pid, 1))
 	{
-		if (-1 != fd)
-		{
-			close(fd);
-			fd = -1;
-		}
-
-		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/psinfo", entries->d_name);
-
-		if (0 != zbx_stat(tmp, &buf))
+		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, procentry.pi_comm))
 			continue;
 
-		if (-1 == (fd = open(tmp, O_RDONLY)))
+		if (NULL != usrinfo && usrinfo->pw_uid != procentry.pi_uid)
 			continue;
 
-		if (-1 == read(fd, &psinfo, sizeof(psinfo)))
+		if (NULL != proccomm && '\0' != *proccomm && SUCCEED != check_procargs(&procentry, proccomm))
 			continue;
 
-		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, psinfo.pr_fname))
-			continue;
-
-		if (NULL != usrinfo && usrinfo->pw_uid != psinfo.pr_uid)
-			continue;
-
-		if (NULL != proccomm && '\0' != *proccomm && NULL == zbx_regexp_match(psinfo.pr_psargs, proccomm, NULL))
-			continue;
-
-		value = psinfo.pr_size;
-		value <<= 10;	/* kB to Byte */
-
-		if (0 == proccount++)
-			memsize = value;
-		else
-		{
-			if (do_task == DO_MAX)
-				memsize = MAX(memsize, value);
-			else if (do_task == DO_MIN)
-				memsize = MIN(memsize, value);
-			else
-				memsize += value;
-		}
-	}
-
-	closedir(dir);
-	if (-1 != fd)
-		close(fd);
-#else
-	while (0 < getprocs(&procsinfo, (int)sizeof(struct procsinfo), NULL, 0, &pid, 1))
-	{
-		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, procsinfo.pi_comm))
-			continue;
-
-		if (NULL != usrinfo && usrinfo->pw_uid != procsinfo.pi_uid)
-			continue;
-
-		if (NULL != proccomm && '\0' != *proccomm)
-		{
-			init_result(&proc_args);
-
-			zbx_snprintf(tmp, sizeof(tmp), "ps -p %i -oargs=", procsinfo.pi_pid);
-
-			if (SYSINFO_RET_OK != EXECUTE_STR(tmp, &proc_args))
-			{
-				free_result(&proc_args);
-				continue;
-			}
-			if (NULL == zbx_regexp_match(proc_args.str, proccomm, NULL))
-			{
-				free_result(&proc_args);
-				continue;
-			}
-
-			free_result(&proc_args);
-		}
-
-		value = procsinfo.pi_size;
+		value = procentry.pi_size;
 		value <<= 12;	/* number of pages to bytes */
 
 		if (0 == proccount++)
+		{
 			memsize = value;
+		}
 		else
 		{
-			if (DO_MAX == do_task)
+			if (ZBX_DO_MAX == do_task)
 				memsize = MAX(memsize, value);
-			else if (DO_MIN == do_task)
+			else if (ZBX_DO_MIN == do_task)
 				memsize = MIN(memsize, value);
 			else
 				memsize += value;
 		}
         }
-#endif /* HAVE_SYS_PROCFS_H */
 
-	if (do_task == DO_AVG)
-	{
-		SET_DBL_RESULT(result, proccount == 0 ? 0 : memsize/proccount);
-	}
+	if (ZBX_DO_AVG == do_task)
+		SET_DBL_RESULT(result, 0 == proccount ? 0 : memsize / (double)proccount);
 	else
 		SET_UI64_RESULT(result, memsize);
 
@@ -226,19 +141,10 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 int	PROC_NUM(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	char			tmp[MAX_STRING_LEN], *procname, *proccomm, *param;
-#ifdef HAVE_SYS_PROCFS_H
-	DIR			*dir;
-	struct dirent		*entries;
-	zbx_stat_t		buf;
-	struct psinfo		psinfo;
-	int			fd = -1;
-#else
-	struct procsinfo	procsinfo;
-	pid_t			pid = 0;
-	AGENT_RESULT		proc_args;
-#endif /* HAVE_SYS_PROCFS_H */
+	char			*param, *procname, *proccomm;
 	struct passwd		*usrinfo;
+	struct procentry64	procentry;
+	pid_t			pid = 0;
 	int			zbx_proc_stat;
 	zbx_uint64_t		proccount = 0;
 
@@ -271,82 +177,22 @@ int	PROC_NUM(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 	proccomm = get_rparam(request, 3);
 
-#ifdef HAVE_SYS_PROCFS_H /* AIX 5.x */
-	if (NULL == (dir = opendir("/proc")))
-		return SYSINFO_RET_FAIL;
-
-	while (NULL != (entries = readdir(dir)))
+	while (0 < getprocs64(&procentry, (int)sizeof(struct procentry64), NULL, 0, &pid, 1))
 	{
-		if (-1 != fd)
-		{
-			close(fd);
-			fd = -1;
-		}
-
-		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/psinfo", entries->d_name);
-
-		if (0 != zbx_stat(tmp, &buf))
+		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, procentry.pi_comm))
 			continue;
 
-		if (-1 == (fd = open(tmp, O_RDONLY)))
+		if (NULL != usrinfo && usrinfo->pw_uid != procentry.pi_uid)
 			continue;
 
-		if (-1 == read(fd, &psinfo, sizeof(psinfo)))
+		if (SUCCEED != check_procstate(&procentry, zbx_proc_stat))
 			continue;
 
-		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, psinfo.pr_fname))
+		if (NULL != proccomm && '\0' != *proccomm && SUCCEED != check_procargs(&procentry, proccomm))
 			continue;
-
-		if (NULL != usrinfo && usrinfo->pw_uid != psinfo.pr_uid)
-			continue;
-
-		if (FAIL == check_procstate(&psinfo, zbx_proc_stat))
-			continue;
-
-		if (NULL != proccomm && '\0' != *proccomm && NULL == zbx_regexp_match(psinfo.pr_psargs, proccomm, NULL))
-			continue;
-
-		proccount++;
-	}
-
-	closedir(dir);
-	if (-1 != fd)
-		close(fd);
-#else
-	while (0 < getprocs(&procsinfo, (int)sizeof(struct procsinfo), NULL, 0, &pid, 1))
-	{
-		if (NULL != procname && '\0' != *procname && 0 != strcmp(procname, procsinfo.pi_comm))
-			continue;
-
-		if (NULL != usrinfo && usrinfo->pw_uid != procsinfo.pi_uid)
-			continue;
-
-		if (FAIL == check_procstate(&procsinfo, zbx_proc_stat))
-			continue;
-
-		if (NULL != proccomm && '\0' != *proccomm)
-		{
-			init_result(&proc_args);
-
-			zbx_snprintf(tmp, sizeof(tmp), "ps -p %i -oargs=", procsinfo.pi_pid);
-
-			if (SYSINFO_RET_OK != EXECUTE_STR(tmp, &proc_args))
-			{
-				free_result(&proc_args);
-				continue;
-			}
-			if (NULL == zbx_regexp_match(proc_args.str, proccomm, NULL))
-			{
-				free_result(&proc_args);
-				continue;
-			}
-
-			free_result(&proc_args);
-		}
 
 		proccount++;
         }
-#endif /* HAVE_SYS_PROCFS_H */
 
 	SET_UI64_RESULT(result, proccount);
 
