@@ -21,11 +21,6 @@
 #include "sysinfo.h"
 #include "zbxregexp.h"
 
-#define DO_SUM 0
-#define DO_MAX 1
-#define DO_MIN 2
-#define DO_AVG 3
-
 static int	check_procstate(psinfo_t *psinfo, int zbx_proc_stat)
 {
 	if (zbx_proc_stat == ZBX_PROC_STAT_ALL)
@@ -75,13 +70,13 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 	param = get_rparam(request, 2);
 
 	if (NULL == param || '\0' == *param || 0 == strcmp(param, "sum"))
-		do_task = DO_SUM;
+		do_task = ZBX_DO_SUM;
 	else if (0 == strcmp(param, "avg"))
-		do_task = DO_AVG;
+		do_task = ZBX_DO_AVG;
 	else if (0 == strcmp(param, "max"))
-		do_task = DO_MAX;
+		do_task = ZBX_DO_MAX;
 	else if (0 == strcmp(param, "min"))
-		do_task = DO_MIN;
+		do_task = ZBX_DO_MIN;
 	else
 		return SYSINFO_RET_FAIL;
 
@@ -125,9 +120,9 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 			memsize = value;
 		else
 		{
-			if (do_task == DO_MAX)
+			if (ZBX_DO_MAX == do_task)
 				memsize = MAX(memsize, value);
-			else if (do_task == DO_MIN)
+			else if (ZBX_DO_MIN == do_task)
 				memsize = MIN(memsize, value);
 			else
 				memsize += value;
@@ -138,14 +133,10 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 	if (-1 != fd)
 		close(fd);
 
-	if (do_task == DO_AVG)
-	{
+	if (ZBX_DO_AVG == do_task)
 		SET_DBL_RESULT(result, proccount == 0 ? 0 : memsize / proccount);
-	}
 	else
-	{
 		SET_UI64_RESULT(result, memsize);
-	}
 
 	return SYSINFO_RET_OK;
 }
